--- a/index.html
+++ b/index.html
@@ -1,1 +1,421 @@
-Javad Gholampoor
+<!DOCTYPE html>
+<html lang="en" prefix="og: http://ogp.me/ns#">
+<head><meta charset="utf-8">
+	<title>Javad Gholampoor</title>
+	<meta property="og:title" content="Javad Gholampoor" /><meta property="og:type" content="Personal WebSite" /><meta property="og:url" content="http://www.gholampoor.ir" /><meta property="og:image" content="http://gholampoor.ir/images/main-photo.jpg" /><meta property="og:audio" content="http://example.com/bond/theme.mp3" /><meta property="og:description" content="Javad Gholampoor Personal WebSite : Web full-stack developer" /><meta property="og:locale" content="fa_IR" /><meta property="og:locale:alternate" content="en_US" /><meta property="og:site_name" content="Javad Gholampoor" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" /><!-- Template CSS Files -->
+	<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+	<link href="css/jquery.animatedheadline.css" rel="stylesheet" type="text/css" />
+	<link href="css/materialize.min.css" rel="stylesheet" type="text/css" />
+	<link href="css/style.css" rel="stylesheet" type="text/css" />
+	<link href="css/skins/yellow.css" rel="stylesheet" type="text/css" /><!-- Template JS Files --><script src="js/modernizr.custom.js"></script><script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Person",
+          "name": "Javad Gholampor",
+          "disambiguatingDescription": "Web Developer",
+          "children": {
+            "@type": "Person",
+            "name": "Javad Gholampoor",
+            "disambiguatingDescription": "Web Developer"
+          }
+        }
+        </script><script type="application/ld+json">
+        {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name" : "وب سایت شخصی جواد غلام پور",
+        "alternateName" : "Javad Gholampoor",
+        "url": "http://gholampoor.ir",
+        "logo": "http://gholampoor.ir/images/main-photo.jpg",
+        "contactPoint" : [{
+        "@type" : "ContactPoint",
+        "contactType": "Customer service",
+
+        "telephone" : "+98-9372883713",
+        "areaServed" : "IR",
+        "availableLanguage" : "Persian"
+        }],
+        "sameAs" : [
+	
+	"http://gholampoor.ir",
+        ]
+        }
+    </script><script type="application/ld+json">
+        {
+        "@context": "http://schema.org",
+        "@type": "WebSite",
+        "name": "جواد غلام پور",
+        "alternateName": "وب سایت شخصی جواد غلام پور  - Javadvad Gholampoor",
+        "url": "http://gholampoor.ir"
+        }
+    </script>
+</head>
+<body class="dark"><!-- Preloader Start -->
+<div id="loader-wrapper">
+<div id="loader"></div>
+
+<div class="loader-section section-left"></div>
+
+<div class="loader-section section-right"></div>
+</div>
+<!-- Preloader Ends --><!-- Wrapper Starts -->
+
+<div class="wrapper">
+<div class="bl-main" id="bl-main"><!-- Top Left Section Starts -->
+<section class="topleft">
+<div class="bl-box row valign-wrapper">
+<div class="row valign-wrapper">
+<div class="title-heading">
+<div class="selector uppercase" id="selector">
+<h3 class="ah-headline p-none m-none"><span class="font-weight-300">Hi There ! I&#39;m</span> <span class="ah-words-wrapper"> <b class="is-visible">Javad Gholampoor</b> <b>a web developer</b> <b>an App developer</b> <b>a programmer...</b> </span></h3>
+</div>
+</div>
+</div>
+</div>
+</section>
+<!-- Top Left Section Ends --><!-- About Section Starts -->
+
+<section><!-- About Title Starts -->
+<div class="bl-box valign-wrapper">
+<div class="page-title center-align"><span class="title-bg">Resume</span>
+
+<h2 class="center-align"><span data-hover="About">About </span> <span data-hover="Me">Me</span></h2>
+</div>
+</div>
+<!-- About Title Ends --><!-- About Expanded Starts -->
+
+<div class="bl-content"><!-- Main Heading Starts -->
+<div class="container page-title center-align">
+<h2 class="center-align"><span data-hover="About">About </span> <span data-hover="Me">Me</span></h2>
+<span class="title-bg">Resume</span></div>
+<!-- Main Heading Ends -->
+
+<div class="container infos"><!-- Divider Starts -->
+<div class="divider center-align"></div>
+<!-- Divider Ends --><!-- Personal Informations Starts -->
+
+<div class="row"><!-- Picture Starts -->
+<div class="col s12 m5 l4 xl3 profile-picture"><img alt="My Photo" class="responsive-img my-picture" src="images/photo-about.jpg" /></div>
+<!-- Picture Ends -->
+
+<div class="col s12 m7 l8 xl9 personal-info">
+<h6 class="uppercase">Personal information</h6>
+
+<div class="col m12 l7 xl7 p-none">
+<p class="second-font">I&#39;m a freelance web designer &amp; developer based in mashhad, iran.<br />
+I have serious passion for backend development and UI,UX ,with over 10 years of experience.</p>
+</div>
+
+<div class="col s12 m12 l6 p-none">
+<ul class="second-font list-1">
+	<li><span class="font-weight-600">First Name: </span>Javad</li>
+	<li><span class="font-weight-600">Last Name: </span>Gholampoor</li>
+	<li><span class="font-weight-600">Date of birth: </span>4 April 1987</li>
+	<li><span class="font-weight-600">Nationality: </span>Iraninan</li>
+	<li><span class="font-weight-600">Freelance: </span>Available</li>
+</ul>
+</div>
+
+<div class="col s12 m12 l6 p-none">
+<ul class="second-font list-2">
+	<li><span class="font-weight-600">Mobile: </span>+98 937 288 3713</li>
+	<li><span class="font-weight-600">Mobile: </span>+98 915 006 4740</li>
+	<li><span class="font-weight-600">Address: </span>Mashhad, Iran</li>
+	<li><span class="font-weight-600">Email: </span>Javad10170@Hotmail.com</li>
+	<li><span class="font-weight-600">Spoken Languages: </span>Persian</li>
+	<li><span class="font-weight-600">Skype: </span>javad10170</li>
+</ul>
+</div>
+<a class="col s12 m12 l4 xl4 waves-effect waves-light btn font-weight-500" href="/files/Javad Gholampoor Resume.pdf">Download Resume </a> <!-- <a href="blog-dark.html" class="col s12 m12 l4 xl4 btn btn-blog font-weight-500">
+									My Blog <i class="fa fa-edit"></i>
+								</a> --></div>
+</div>
+<!-- Personal Informations Ends --></div>
+<!-- Resume Starts -->
+
+<div class="resume-container">
+<div class="container">
+<div class="valign-wrapper row"><!-- Resume Menu Starts -->
+<div class="resume-list col l4">
+<div class="resume-list-item is-active" data-index="0" id="resume-list-item-0">
+<div class="resume-list-item-inner">
+<h6 class="resume-list-item-title uppercase">Experience</h6>
+</div>
+</div>
+
+<div class="resume-list-item" data-index="1" id="resume-list-item-1">
+<div class="resume-list-item-inner">
+<h6 class="resume-list-item-title uppercase">Education</h6>
+</div>
+</div>
+
+<div class="resume-list-item" data-index="2" id="resume-list-item-2">
+<div class="resume-list-item-inner">
+<h6 class="resume-list-item-title uppercase">Skills</h6>
+</div>
+</div>
+</div>
+<!-- Resume Menu Ends --><!-- Resume Content Starts -->
+
+<div class="col s12 m12 l8 resume-cards-container">
+<div class="resume-cards"><!-- Experience Starts -->
+<div class="resume-card resume-card-0" data-index="0"><!-- Experience Header Title Starts -->
+<div class="resume-card-header">
+<div class="resume-card-name">Experience</div>
+</div>
+<!-- Experience Header Title Ends --><!-- Experience Content Starts -->
+
+<div class="resume-card-body experience">
+<div class="resume-card-body-container second-font"><!-- Single Experience Starts -->
+<div class="resume-content">
+<h6 class="uppercase"><span>Web Developer - </span>Ide Pardazan Fadak Qader Yassin</h6>
+<span class="date">2012 - 2013</span> <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium orci sit amet mi ullamcorper</p> --></div>
+<!-- Single Experience Ends --><!-- Single Experience Starts -->
+
+<div class="resume-content">
+<h6 class="uppercase"><span>Web Developer &amp; App Developer - </span>Khorasan Newspaper</h6>
+<span class="date">2013 - 2016</span> <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium orci sit amet mi ullamcorper</p> --></div>
+<!-- Single Experience Ends --><!-- Single Experience Starts -->
+
+<div class="resume-content">
+<h6 class="uppercase"><span>full-stack Developer - </span>Saana , Fanap , Arzesh co , Sava</h6>
+<span class="date">2016 - 2018</span> <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium orci sit amet mi ullamcorper</p> --></div>
+<!-- Single Experience Ends --></div>
+</div>
+<!-- Experience Content Starts --></div>
+<!-- Experience Ends --><!-- Education Starts -->
+
+<div class="resume-card resume-card-1" data-index="1"><!-- Education Header Title Starts -->
+<div class="resume-card-header">
+<div class="resume-card-name">Education</div>
+</div>
+<!-- Education Header Title Starts -->
+
+<div class="resume-card-body education">
+<div class="resume-card-body-container second-font"><!-- Single Education Starts -->
+<div class="resume-content">
+<h6 class="uppercase"><span>Diploma - </span>Emam Khomini ,Kish Island ,Iran</h6>
+<span class="date">2002 - 2006</span> <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium orci sit amet mi ullamcorper</p> --></div>
+<!-- Single Education Ends --><!-- Single Education Starts -->
+
+<div class="resume-content">
+<h6 class="uppercase"><span>Advanced Diploma (Software - Computer) - </span>Khorasan Univeristy ,Mashhad ,Iran</h6>
+<span class="date">2006 - 2009</span> <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium orci sit amet mi ullamcorper</p> --></div>
+<!-- Single Education Ends --><!-- Single Education Starts -->
+
+<div class="resume-content">
+<h6 class="uppercase"><span>Bachelor (Software - Computer) </span>Azad Sabzevar Univeristy ,Sabzevar ,Iran</h6>
+<span class="date">2007 - 2011</span> <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium orci sit amet mi ullamcorper</p> --></div>
+<!-- Single Education Ends --></div>
+</div>
+</div>
+<!-- Education Ends --><!-- Skills Starts -->
+
+<div class="resume-card resume-card-2" data-index="2"><!-- Skills Header Title Starts -->
+<div class="resume-card-header">
+<div class="resume-card-name">Skills</div>
+</div>
+<!-- Skills Header Title Starts -->
+
+<div class="resume-card-body skills">
+<div class="resume-card-body-container second-font">
+<div class="row"><!-- Skills Row Starts -->
+<div class="col s6"><!-- Single Skills Starts -->
+<div class="resume-content">
+<h6 class="uppercase">backend : asp.net , mvc.net,.net core , nodejs</h6>
+
+<p></p>
+</div>
+<!-- Single Skills Ends --><!-- Single Skills Starts -->
+
+<div class="resume-content">
+<h6 class="uppercase">UI/UX : adobe xd, figma</h6>
+
+<p></p>
+</div>
+<!-- Single Skills Ends --><!-- Single Skills Starts -->
+
+<div class="resume-content">
+<h6 class="uppercase">html ,javascript ,css ,jquery</h6>
+
+<p></p>
+</div>
+<!-- Single Skills Ends --><!-- Single Skills Starts -->
+
+<div class="resume-content">
+<h6 class="uppercase">mvvm library(Knockout,angularjs,vuejs,...)</h6>
+
+<p></p>
+</div>
+<!-- Single Skills Ends --><!-- Single Skills Starts -->
+
+<div class="resume-content">
+<h6 class="uppercase">cross platform mobile application (cordova,phonegap,nativescript)</h6>
+
+<p></p>
+</div>
+<!-- Single Skills Ends --><!-- Single Skills Starts -->
+
+<div class="resume-content">
+<h6 class="uppercase">windwos application : c#,delphi, electron</h6>
+
+<p></p>
+</div>
+<!-- Single Skills Ends --></div>
+<!-- Skills Row Ends --><!-- Skills Row Starts -->
+
+<div class="col s6"><!-- Single Skills Starts -->
+<div class="resume-content">
+<h6 class="uppercase">cms : wordpress, opencart ,...</h6>
+
+<p></p>
+</div>
+<!-- Single Skills Ends --></div>
+<!-- Skills Row Ends --></div>
+</div>
+</div>
+</div>
+<!-- Skills Ends --></div>
+</div>
+<!-- Resume Content Ends --></div>
+</div>
+</div>
+<!-- Resume Ends --><!-- Fun Facts Starts -->
+
+<div class="container badges">
+<div class="row"><!-- Fact Badge Item Starts -->
+<div class="col s12 m4 l4 center-align">
+<h3><span class="font-weight-700">10+</span></h3>
+
+<h6 class="uppercase font-weight-500">Years Experience</h6>
+</div>
+<!-- Fact Badge Item Ends --><!-- Fact Badge Item Starts -->
+
+<div class="col s12 m4 l4 center-align">
+<h3><span class="font-weight-700">60+</span></h3>
+
+<h6 class="uppercase font-weight-500">Done Projects</h6>
+</div>
+<!-- Fact Badge Item Ends --><!-- Fact Badge Item Starts -->
+
+<div class="col s12 m4 l4 center-align">
+<h3><span class="font-weight-700">35+</span></h3>
+
+<h6 class="uppercase font-weight-500">Happy customers</h6>
+</div>
+<!-- Fact Badge Item Ends --></div>
+</div>
+<!-- Fun Facts Ends --></div>
+<!-- End Expanded About --><img alt="close" class="bl-icon-close" src="images/close-button.png" /></section>
+<!-- About Ends --><!-- Portfolio Starts -->
+
+<section id="bl-work-section"><!-- Portfolio Title Starts -->
+<div class="bl-box valign-wrapper">
+<div class="page-title center-align"><span class="title-bg">works</span>
+
+<h2 class="center-align"><span data-hover="my">my </span> <span data-hover="portfolio">portfolio</span></h2>
+</div>
+</div>
+<!-- Portfolio Title Ends --><!-- Portfolio Expanded Starts -->
+
+<div class="bl-content"><!-- Main Heading Starts -->
+<div class="container page-title center-align">
+<h2 class="center-align"><span data-hover="my">my </span> <span data-hover="portfolio">portfolio</span></h2>
+<span class="title-bg">works</span></div>
+<!-- Main Heading Ends -->
+
+<div class="container"><!-- Divider Starts -->
+<div class="divider center-align"></div>
+<!-- Divider Ends -->
+
+<div class="row center-align da-thumbs" id="bl-work-items">
+<h6 class="uppercase m-none">Coming Soon ...</h6>
+</div>
+</div>
+</div>
+<!-- Portfolio Expanded Ends --><img alt="close" class="bl-icon-close" src="images/close-button.png" /></section>
+<!-- Portfolio Section Ends --><!-- Contact Section Starts -->
+
+<section><!-- Contact Title Starts -->
+<div class="bl-box valign-wrapper">
+<div class="page-title center-align"><span class="title-bg">Contact</span>
+
+<h2 class="center-align"><span data-hover="get">get </span> <span data-hover="in touch">in touch</span></h2>
+</div>
+</div>
+<!-- Contact Title Ends --><!-- Expanded Contact Starts -->
+
+<div class="bl-content"><!-- Main Heading Starts -->
+<div class="container page-title center-align">
+<h2 class="center-align"><span data-hover="get">get </span> <span data-hover="in touch">in touch</span></h2>
+<span class="title-bg">Contact</span></div>
+<!-- Main Heading Ends -->
+
+<div class="container"><!-- Divider Starts -->
+<div class="divider center-align"></div>
+<!-- Divider Ends -->
+
+<div class="row contact"><!-- Contact Infos Starts -->
+<div class="col s12 m5 l3 xl3 leftside"><!-- Contacts Starts -->
+<h6 class="font-weight-500 uppercase">Phone</h6>
+<span class="font-weight-400 second-font">+98 937 288 3713</span><br />
+<span class="font-weight-400 second-font">+98 915 006 4740</span>
+
+<h6 class="font-weight-500 uppercase">Email</h6>
+<span class="font-weight-400 second-font"> javad10170@Hotmail.com</span>
+
+<h6 class="font-weight-500 uppercase">Address</h6>
+<span class="font-weight-400 second-font"> Mashhad, Iran</span><br />
+<span class="font-weight-400 second-font">61 Hejab Street, Mashhad</span> <!-- Contacts Ends --> <!-- Social Media Profiles Starts -->
+
+<h6 class="font-weight-500 uppercase">Social Profiles</h6>
+
+<div class="social">
+<ul class="list-inline social social-intro center-align p-none">
+	<li class="facebook"></li>
+	<li class="twitter"></li>
+	<li class="google-plus"></li>
+	<li class="linkedin"></li>
+</ul>
+</div>
+<!-- Social Media Profiles Ends --></div>
+<!-- Contact Infos Ends --><!-- Contact Form Starts -->
+
+<div class="col s12 m7 l9 xl9 rightside">
+<h6 class="uppercase m-none">Feel free to drop me a line</h6>
+
+<div class="row">
+<p class="col s12 m12 l7 xl7 second-font">If you have any suggestion, project or even you want to say Hello.. please fill out the form below and I will reply you shortly.</p>
+</div>
+
+<form action="php/process-form.php" class="contactform" method="post"><!-- Name Field Starts -->
+<div class="input-field second-font"><input class="validate" id="name" name="name" required="" type="text" /> <label class="font-weight-400" for="name">Your Name</label></div>
+<!-- Name Field Ends --><!-- Email Field Starts -->
+
+<div class="input-field second-font"><input class="validate" id="email" name="email" required="" type="email" /> <label for="email">Your Email</label></div>
+<!-- Email Field Ends --><!-- Start Message Textarea Starts -->
+
+<div class="input-field second-font"><textarea class="materialize-textarea" id="message" name="message" required=""></textarea><label for="message">Your message</label></div>
+<!-- Message Textarea Ends --><!-- Submit Form Button Starts -->
+
+<div class="col s12 m12 l4 xl4 submit-form"><button class="btn font-weight-500" name="send" type="submit">Send Message</button></div>
+<!-- Submit Form Button Ends -->
+
+<div class="col s12 m12 l8 xl8 form-message"></div>
+</form>
+</div>
+<!-- Contact Form Ends --></div>
+</div>
+</div>
+<!-- Expanded Contact Ends --><img alt="close" class="bl-icon-close" src="images/close-button.png" /></section>
+<!-- Contact Section Ends --><!-- Portfolio Panel Items Starts -->
+
+<div class="bl-panel-items" id="bl-panel-work-items"><!-- Portfolio Navigation Starts -->
+<nav><!-- Previous Work Icon Starts --><!-- Previous Work Icon Ends --><!-- Close Work Icon Starts --><!-- Close Work Icon Ends --><!-- Next Work Icon Starts --><!-- Previous Work Icon Ends --></nav>
+<!-- Portfolio Navigation Ends --></div>
+<!-- Portfolio Panel Items Ends --></div>
+</div>
+<!-- Wrapper Ends --><!-- Template JS Files --><script src="js/jquery-2.2.4.min.js"></script><script src="js/jquery.animatedheadline.js"></script><script src="js/boxlayout.js"></script><script src="js/materialize.min.js"></script><script src="js/jquery.hoverdir.js"></script><script src="js/custom.js"></script></body>
+</html>
